actions: stable task ordering and auto-close doc-tag issues when all tasks complete

--- a/.github/workflows/manage-docs-tags.yml
+++ b/.github/workflows/manage-docs-tags.yml
@@ -71,7 +71,12 @@ jobs:
                 labels: ['doc-tags'],
                 per_page: 100
               });  // Get all open issues with the 'doc-tags' label
-              const existingIssue = issues.find(issue => issue.title === `Tags in ${file}`);  // Find an issue with matching title
+              // Titles may include dynamic counters, and may start with counters now.
+              const existingIssue = issues.find(issue => {
+                return issue.title === `Tags in ${file}`
+                  || issue.title.endsWith(`Tags in ${file}`)
+                  || issue.title.includes(` Tags in ${file}`);
+              });
               if (existingIssue) {
                 console.log(`Found existing issue #${existingIssue.number} for ${file}`);
               } else {
@@ -141,7 +146,7 @@ jobs:
               return tasks;
             }
 
-            // Function to format tasks for display in the issue
+            // Function to format tasks for display in the issue and return structured data
             function formatTasks(currentTags, existingTasks) {
               console.log('Formatting tasks');
               const allTasks = [...existingTasks];
@@ -172,14 +177,32 @@ jobs:
                 }
               });
 
+              // Stable ordering: open first, then by tag type (TODO, PLACEHOLDER, NOTE), then content
+              function tagTypeOf(task) {
+                const m = /(TODO|PLACEHOLDER|NOTE)/i.exec(task.content || '');
+                return m ? m[1].toUpperCase() : 'ZZZ';
+              }
+              const order = { 'TODO': 0, 'PLACEHOLDER': 1, 'NOTE': 2, 'ZZZ': 3 };
+              updatedTasks.sort((a, b) => {
+                if (a.completed !== b.completed) return a.completed ? 1 : -1; // open first
+                const ta = order[tagTypeOf(a)] ?? 3;
+                const tb = order[tagTypeOf(b)] ?? 3;
+                if (ta !== tb) return ta - tb;
+                const ca = (a.content || '').toLowerCase();
+                const cb = (b.content || '').toLowerCase();
+                if (ca < cb) return -1; if (ca > cb) return 1; return 0;
+              });
+
               console.log('Formatting tasks as Markdown checklist items');
-              return updatedTasks.map(task => {
+              const text = updatedTasks.map(task => {
                 let taskString = `- [${task.completed ? 'x' : ' '}] ${task.content}`;
                 if (task.status) {
                   taskString += ` --> ${task.status} <--`;
                 }
                 return taskString;
               }).join('\n');
+
+              return { text, tasks: updatedTasks };
             }
 
             // Function to create or update an issue for a file
@@ -194,20 +217,44 @@ jobs:
               if (existingIssue) {
                 console.log(`Updating existing issue #${existingIssue.number}`);
                 const existingTasks = parseExistingTasks(existingIssue.body);
-                const formattedTasks = formatTasks(currentTags, existingTasks);
+                const { text: formattedTasks, tasks: updatedTasks } = formatTasks(currentTags, existingTasks);
+                const openCount = updatedTasks.filter(t => !t.completed).length;
+                const totalCount = updatedTasks.length;
+                const title = `(${openCount}/${totalCount} open) Tags in ${file}`;
                 const body = `File: [${file}](${process.env.GITHUB_SERVER_URL}/${context.repo.owner}/${context.repo.repo}/blob/${context.sha}/${file})\n\nTasks:\n${formattedTasks}\n\nImportant: do not change the status of tasks tagged as "Added from file". These tasks depend on to-do tags in the original file. To change the status of these tasks, please edit the md file directly.`;
 
                 issue = await github.rest.issues.update({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: existingIssue.number,
+                  title: title,
                   body: body,
                   labels: ['doc-tags', label]
                 });
                 console.log(`Updated issue #${issue.data.number} for ${file}`);
+                // Auto-close when no open tasks remain
+                if (totalCount > 0 && openCount === 0) {
+                  console.log(`All tasks complete for ${file}; closing issue #${existingIssue.number}`);
+                  await github.rest.issues.createComment({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: existingIssue.number,
+                    body: 'All tasks are complete. Closing this issue. ✅'
+                  });
+                  await github.rest.issues.update({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: existingIssue.number,
+                    state: 'closed',
+                    labels: ['doc-tags', label, 'doc-tags-complete']
+                  });
+                }
               } else if (currentTags.length > 0) {
                 console.log(`Creating new issue for ${file}`);
-                const formattedTasks = formatTasks(currentTags, []);
+                const { text: formattedTasks, tasks: updatedTasks } = formatTasks(currentTags, []);
+                const openCount = updatedTasks.filter(t => !t.completed).length;
+                const totalCount = updatedTasks.length;
+                const title = `(${openCount}/${totalCount} open) Tags in ${file}`;
                 const body = `File: [${file}](${process.env.GITHUB_SERVER_URL}/${context.repo.owner}/${context.repo.repo}/blob/${context.sha}/${file})\n\nTasks:\n${formattedTasks}\n\nImportant: do not change the status of tasks tagged as "Added from file". These tasks depend on to-do tags in the original file. To change the status of these tasks, please edit the md file directly.`;
 
                 issue = await github.rest.issues.create({
@@ -277,10 +324,19 @@ jobs:
               if (newTasks.length > 0) {
                 const updatedBody = `${issue.body}\n${newTasks.join('\n')}`;
 
+                // Recompute counters and update title accordingly
+                const tasksAfter = parseExistingTasks(updatedBody);
+                const openCount = tasksAfter.filter(t => !t.completed).length;
+                const totalCount = tasksAfter.length;
+                const fileMatch = issue.title.match(/^\(\d+\/\d+ open\)\s+Tags in (.+)$|^Tags in (.+?)(?: \(|$)/);
+                const fileForTitle = fileMatch ? (fileMatch[1] || fileMatch[2]) : null;
+                const newTitle = fileForTitle ? `(${openCount}/${totalCount} open) Tags in ${fileForTitle}` : issue.title;
+
                 await github.rest.issues.update({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: issue.number,
+                  title: newTitle,
                   body: updatedBody
                 });
                 console.log(`Added ${newTasks.length} new task(s) from comment to issue #${issue.number}`);
@@ -326,10 +382,10 @@ jobs:
                 const existingFilesSet = new Set(files);
 
                 for (const issue of existingIssues) {
-                  // Extract the file path from the issue title "Tags in <file>"
-                  const fileMatch = issue.title.match(/^Tags in (.+)$/);
+                  // Extract the file path from the issue title either "(x/y open) Tags in <file>" or "Tags in <file> (x/y open)"
+                  const fileMatch = issue.title.match(/^\(\d+\/\d+ open\)\s+Tags in (.+)$|^Tags in (.+?)(?: \(|$)/);
                   if (fileMatch) {
-                    const filePath = fileMatch[1];
+                    const filePath = fileMatch[1] || fileMatch[2];
                     if (!existingFilesSet.has(filePath)) {
                       // File does not exist, close the issue
                       console.log(`File ${filePath} does not exist. Closing issue #${issue.number}`);
