--- a/.github/workflows/manage-docs-tags.yml
+++ b/.github/workflows/manage-docs-tags.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Trigger on push to main branch
+      - feature/todo-issue-counters-and-style-fixes  # TEMP: enable to run merge-dedup now
   issue_comment:
     types: [created]  # Trigger on new issue comment
   workflow_dispatch:  # Allow manual trigger
